TEST_PROGRAMS/typing_benchmarks/invalid/print1.go
package main

func main() {
	type point struct {
		x, y, z float64
	}
	var p point
	println(p)
}
